--- a/EiraleSalomon/.gitignore
+++ b/EiraleSalomon/.gitignore
@@ -1,4 +1,4 @@
-/EiraleSalomon/nbproject/private/
-/EiraleSalomon/nbproject/
-/EiraleSalomon/dist/
-/EiraleSalomon/build/
+/nbproject/private/
+/nbproject/
+/dist/
+/build/
